[package]
name = "shortener"
version = "0.1.0"
edition.workspace = true
license.workspace = true
[dependencies]
anyhow.workspace = true
axum-extra = { workspace = true, features = ["cookie", "cookie-private"] }
axum.workspace = true
oauth2.workspace = true
chrono.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true
nanoid.workspace = true
utils.workspace = true
workspace_hack.workspace = true
